Retina image add to index file

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
         </header> 
         <main>
             <section class="our-commit">
-                <img src="./images/our-commit.png" alt="our commitment section image" class="our-commit__image">
+                <img src="./images/our-commit.png" alt="our commitment section image" class="our-commit__image" srcset="./images/our-commit.png, ./images/our-commit2.png 2x ">
                 <div class="our-commit__div">
                     <h2 class="our-commit__title">Our commitment</h2>
                     <p class="our-commit__text">
@@ -47,7 +47,7 @@
                         Although we work with growers who pay close attention to all stages of harvest and processing, we employ, on our end, a rigorous quality control program to avoid over-roasting or baking the coffee dry. Every bag of coffee is tagged with a roast date and batch number. Our goal is to roast consistent, user-friendly coffee, so that brewing is easy and enjoyable.
                     </p>
                 </div>
-                <img src="./images/quality.jpg" alt="quality section image" class="quality__image">
+                <img src="./images/quality.jpg" alt="quality section image" class="quality__image" srcset="./images/quality.jpg, ./images/quality-retina.jpg 2x">
             </section> 
 
             <section class="country">
